<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient"
    >

    <TextView
        android:id="@+id/texxrfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rfc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_nombre"
        android:inputType="textCapSentences"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/pellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textCapSentences"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/apellido2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/apellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segund_apellido"
        android:inputType="textCapSentences"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pellido" />

    <Button
        android:id="@+id/btncrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="177dp"
        android:text="@string/crear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnlimpiar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnlimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="177dp"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dia"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="344dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dia"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido2" />

    <EditText
        android:id="@+id/anio"
        android:layout_width="65dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="344dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/a_o"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mes"
        app:layout_constraintTop_toBottomOf="@+id/apellido2" />

    <EditText
        android:id="@+id/mes"
        android:layout_width="67dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/btncrear"
        app:layout_constraintEnd_toStartOf="@+id/anio"
        app:layout_constraintStart_toEndOf="@+id/dia"
        app:layout_constraintTop_toBottomOf="@+id/apellido2" />

</androidx.constraintlayout.widget.ConstraintLayout>